added content DISPLAYS

--- a/15-displays.html
+++ b/15-displays.html
@@ -5,7 +5,7 @@
   <meta name="description" content="spacerace-stecdose-krumeltee | private homepage | elektronik | mikrocontroller | linux">
   <meta name="viewport" content="width=device-width, initial-scale=1.0;" />
   <link href="css/style.css" rel="stylesheet" title="Default Stylesheet">
-  <title>Kontakt - spacerace.github.io</title>
+  <title>Displays - spacerace.github.io</title>
 </head>
 <body>
 
@@ -58,14 +58,29 @@ Eine Liste wäre hier auch denkbar, stellt sich nur die Frage, wie das aussehen 
 -->
 <nav id="breadcrumb">
   <h2>Sie sind hier:</h2>
-  <a href="./99-about.html"><span itemprop="title">Kontakt</span></a>
+  <a href="./15-displays.html"><span itemprop="title">Displays</span></a>
 </nav><!-- breadcrumb ends -->
 
 <!--
 Der eigentliche Inhalt der Seite
 -->
 <article id="main">
- 
+	<h1>Displays</h1><br><br>
+
+	Schon seit langem bin ich begeistert von jeder Art Display und Anzeige und kann es nicht lassen aus E-Schrott solche auszubauen.<br>
+	Viele lagern nun in irgendwelchen Boxen, aber mit manchen habe ich auch schon ein paar coole Dinge gebaut. 
+	<br>	
+	<br>Hier stelle ich ein paar dieser Dinge vor.
+	<br>
+	<br>
+	<h2>SID-Clock</h2>
+	Dieser Wecker ist noch nicht fertig, aber er zeigt schonmal die Uhrzeit und hat rudimentäre Einstellmöglichkeiten. Das Display ist<br>
+	ein SDA5708 von Siemens. Es stammt aus einer alten Nokia DBOX 1, die ich vom Sperrmüll habe.<br>
+	<br>
+	<hr>
+	<h2>Ein paar 7-Segmen anzeigen und ein Steckbrett</h2>
+	Langeweile und ein bisschen Auslötwahn, das kommt dabei raus: <img src="img/7seg_bb_light.jpg"><img src="img/7seg_pile.jpg"><br>
+	
 </article>
 
 
