--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="description" content="spacerace-stecdose-krumeltee | private homepage | elektronik | mikrocontroller | linux">
   <meta name="viewport" content="width=device-width, initial-scale=1.0;" />
   <link href="css/style.css" rel="stylesheet" title="Default Stylesheet">
-  <title>spacerace-stecdose-krumeltee</title>
+  <title>spacerace.github.io</title>
 </head>
 <body>
 
