working on DISPLAY page

--- a/15-displays.html
+++ b/15-displays.html
@@ -71,11 +71,12 @@ Der eigentliche Inhalt der Seite
 	Viele lagern nun in irgendwelchen Boxen, aber mit manchen habe ich auch schon ein paar coole Dinge gebaut. 
 	<br>	
 	<br>Hier stelle ich ein paar dieser Dinge vor.
-	<br>
-	<br>
-	<h2>SID-Clock</h2>
+	<br><br>
+	<hr>
+	<h2>SDA5708 - verwendet in einem Wecker mit stm32-cpu</h2>
 	Dieser Wecker ist noch nicht fertig, aber er zeigt schonmal die Uhrzeit und hat rudimentäre Einstellmöglichkeiten. Das Display ist<br>
 	ein SDA5708 von Siemens. Es stammt aus einer alten Nokia DBOX 1, die ich vom Sperrmüll habe.<br>
+	<img src="img/sda5708_small.jpg" alt="sda5708 12:07 herz">
 	<br>
 	<hr>
 	<h2>Ein paar 7-Segmen anzeigen und ein Steckbrett</h2>
