--- a/saa1064.html
+++ b/saa1064.html
@@ -75,8 +75,8 @@ Der eigentliche Inhalt der Seite
 	Rasperry, Grasshopper, NGW100, BananaPi, ... und wie sie alle heissen.<br><br>
 	Der Code ist auch ein schönes, kurzes Beispiel, wie man den I²C-Bus unter Linux nutzbar macht.
 	<br><br>
-	<a href="">Hier</a> findest du ein gepacktes Archiv mit Code und Makefile für das AVR32 Grasshopper Board.<br>
-	<a href="">Und hier</a> findest du den Code direkt zum Lesen im Browser (git browser)<br>
+	<a href="https://github.com/spacerace/spacerace.github.io/blob/master/code/saa1064_avr32.tar.bz2?raw=true">Hier</a> findest du ein gepacktes Archiv mit Code und Makefile für das AVR32 Grasshopper Board. Ebenso ist ein compiliertes bin-File enthalten.<br>
+	<a href="https://github.com/spacerace/spacerace.github.io/tree/master/code/saa1064_linux/">Und hier</a> findest du den Code direkt zum Lesen im Browser (git browser)<br>
 	<br>
 	<img src="img/saa1064/saa1064_small.jpg" alt="saa1064 schaltplan">
 	<img src="img/saa1064/saa1064_schem.png" alt="saa1064 schaltplan">
