--- a/saa1064.html
+++ b/saa1064.html
@@ -77,8 +77,8 @@ Der eigentliche Inhalt der Seite
 	<br><br>
 	<a href="https://github.com/spacerace/spacerace.github.io/blob/master/code/saa1064_avr32.tar.bz2?raw=true">Hier</a> findest du ein gepacktes Archiv mit Code und Makefile für das AVR32 Grasshopper Board. Ebenso ist ein compiliertes bin-File enthalten.<br>
 	<a href="https://github.com/spacerace/spacerace.github.io/tree/master/code/saa1064_linux/">Und hier</a> findest du den Code direkt zum Lesen im Browser (git browser)<br>
-	<a href="https://github.com/spacerace/spacerace.github.io/blob/master/doc/datasheet/SAA1064_FA.pdf?raw=truw">Und hier</a> ein SAA1064 Datenblatt in Deutsch von Funkamamteur<br>
-	<a href="https://github.com/spacerace/spacerace.github.io/blob/master/doc/datasheet/SAA1064.pdf?raw=truw">Und hier</a> das SAA1064 Datenblatt von NXP (Philipps)<br>
+	<a href="https://github.com/spacerace/spacerace.github.io/blob/master/doc/datasheet/SAA1064_FA.pdf?raw=true">Und hier</a> ein SAA1064 Datenblatt in Deutsch von Funkamamteur<br>
+	<a href="https://github.com/spacerace/spacerace.github.io/blob/master/doc/datasheet/SAA1064.pdf?raw=true">Und hier</a> das SAA1064 Datenblatt von NXP (Philipps)<br>
 	<br>
 	<img src="img/saa1064/saa1064_small.jpg" alt="saa1064 schaltplan">
 	<img src="img/saa1064/saa1064_schem.png" alt="saa1064 schaltplan">
