--- a/15-displays.html
+++ b/15-displays.html
@@ -9,17 +9,6 @@
 </head>
 <body>
 
-<!--
-Skiplinks
-Mit der Tabtaste Inhalte anspringen.
--->
-<ul id="skiplinks">
-  <li><a href="#navigation">Zum Hauptmenü</a></li>
-  <li><a href="#search">Zur Suche</a></li>
-  <li><a href="#main">Zum Inhalt</a></li>
-</ul><!-- skiplinks ends -->
-
-
 <header>
   <hgroup lang="en">
     <h1><a href="index.html"><abbr title="Startseite">spacerace.github.io</abbr></a></h1>
@@ -76,11 +65,32 @@ Der eigentliche Inhalt der Seite
 	<h2>SDA5708 - verwendet in einem Wecker mit stm32-cpu</h2>
 	Dieser Wecker ist noch nicht fertig, aber er zeigt schonmal die Uhrzeit und hat rudimentäre Einstellmöglichkeiten. Das Display ist<br>
 	ein SDA5708 von Siemens. Es stammt aus einer alten Nokia DBOX 1, die ich vom Sperrmüll habe.<br>
+	<br>
+	<center>
 	<img src="img/sda5708_small.jpg" alt="sda5708 12:07 herz">
+	</center>
+	<br>
+	Dieses Display verwende ich in meiner <b><a href="">SID-Clock</a></b>.<br><br>
+	Ein Beispielprojekt für ein STM32F103+SDA5708 findest du <a href="">hier</a><br>
+	<a href="">Hier</a> geht's direkt zum Code für das Display zum lesen im Browser.<br>
+	<BR><hr>
+	<h2>Ein paar 7-Segment-Anzeigen und ein Steckbrett</h2>
+	Langeweile und ein bisschen Auslötwahn, das kommt dabei raus:<br>
+	<center>
+	<table border="0">
+		<tr>
+			<td><center><img src="img/7seg_bb_light.jpg" width="300"></center></td>
+			<td><center><img src="img/7seg_pile.jpg" width="300"></center></td>
+		</tr>
+	</table>
+	</center>
+	
+	
 	<br>
 	<hr>
-	<h2>Ein paar 7-Segmen anzeigen und ein Steckbrett</h2>
-	Langeweile und ein bisschen Auslötwahn, das kommt dabei raus: <img src="img/7seg_bb_light.jpg"><img src="img/7seg_pile.jpg"><br>
+	<h2>Super-Sized RGB 7-Segment-Anzeigen</h2>
+	Kürzlich fand ich im Elektroschrott ein paar Platinen, die aussehen, als würden sie von einem Spielautomaten oder etwas
+	Ähnlichem stammen. Ich habe nicht schlecht gestaunt, als ich die riesigen Anzeigen dann mal genauer gesehen habe...
 	
 </article>
 
