--- a/sid_clock.html
+++ b/sid_clock.html
@@ -9,17 +9,6 @@
 </head>
 <body>
 
-<!--
-Skiplinks
-Mit der Tabtaste Inhalte anspringen.
--->
-<ul id="skiplinks">
-  <li><a href="#navigation">Zum Hauptmenü</a></li>
-  <li><a href="#search">Zur Suche</a></li>
-  <li><a href="#main">Zum Inhalt</a></li>
-</ul><!-- skiplinks ends -->
-
-
 <header>
   <hgroup lang="en">
     <h1><a href="index.html"><abbr title="Startseite">spacerace.github.io</abbr></a></h1>
@@ -28,9 +17,7 @@ Mit der Tabtaste Inhalte anspringen.
 </header>
 
 <main>
-<!--
-aside (1. Sidebar mit dem Hauptmenu)
--->
+<!-- aside (1. Sidebar mit dem Hauptmenu) -->
 <aside>
   <h2>Hauptmenu</h2>
   <nav id="navigation">
