--- a/15-displays.html
+++ b/15-displays.html
@@ -62,17 +62,26 @@ Der eigentliche Inhalt der Seite
 	<br>Hier stelle ich ein paar dieser Dinge vor.
 	<br><br>
 	<hr>
-	<h2>SDA5708 - verwendet in einem Wecker mit stm32-cpu</h2>
-	Dieser Wecker ist noch nicht fertig, aber er zeigt schonmal die Uhrzeit und hat rudimentäre Einstellmöglichkeiten. Das Display ist<br>
-	ein SDA5708 von Siemens. Es stammt aus einer alten Nokia DBOX 1, die ich vom Sperrmüll habe.<br>
+	<h2>SCF5740</h2>
+	Das Display von OSRAM habe ich auch einem E-Schrott-Container zusammen mit einer Platine, habe aber nie rausgefunden,
+	für was das eingesetzt wurde.<br>
+	<center><img src="img/scf5740_alarm_clock.jpg"></center>
+	<br>
+	<br>
+	<hr>
+	<h2>SDA5708</h2>
+	Das Display von Siemens stammt aus einer alten Nokia DBOX 1, die ich vom Sperrmüll habe.<br>
+	Es ist ein sehr helles, grünes, 5x7 Dot Matrix Display.<br>
+	Man kann jedes Pixel einzeln ansteuern und braucht im Programm einen Zeichensatz, der auch schon einiges an Flash belegen kann.<br>
+	Ich "verbrate" 3bit pro Byte, indem ich für jede Zeile ein Byte benutze. Damit komme ich auf 7byte pro Zeichen.
+	Bei einem vollen ASCII-Charset o.ä. braucht man dann 256x7b=1792byte.<br>
 	<br>
 	<center>
 	<img src="img/sda5708_small.jpg" alt="sda5708 12:07 herz">
 	</center>
 	<br>
-	Dieses Display verwende ich in meiner <b><a href="">SID-Clock</a></b>.<br><br>
-	Ein Beispielprojekt für ein STM32F103+SDA5708 findest du <a href="">hier</a><br>
-	<a href="">Hier</a> geht's direkt zum Code für das Display zum lesen im Browser.<br>
+	Dieses Display verwende ich in meiner <b><a href="sid_clock.html">SID-Clock</a></b>.<br><br>
+	Ein Beispielprojekt mit makefile für ein STM32F103+SDA5708 findest du <a href="https://github.com/spacerace/stm32f103c8t6-sda5708">hier</a>.<br>
 	<BR><hr>
 	<h2>Ein paar 7-Segment-Anzeigen und ein Steckbrett</h2>
 	Langeweile und ein bisschen Auslötwahn, das kommt dabei raus:<br>
