work in progress

--- a/15-displays.html
+++ b/15-displays.html
@@ -26,11 +26,10 @@ aside (1. Sidebar mit dem Hauptmenu)
   <ul>
     <li><a href="index.html">Startseite</a></li>
     <li><a href="01-elektronik.html">Elektronik</a></li>
-    <li><a href="05-stm32.html">STM32</a></li>
-    <li><a href="06-avr_avr32.html">AVR+AVR32</a></li>
+    <li><a href="05-mikrocontroller.html">Mikrocontroller</a></li>
     <li><a href="15-displays.html">Displays</a></li>
-    <li><a href="25-emlinux.html">Embedded Linux</a></li>
-    <li><a href="35-pclinux.html">PC Linux</a></li>
+    <li><a href="35-linux.html">Linux</a></li>
+    <li><a href="50-pc.html">PC</a></li>
     <li><a href="75-collect.html">Sammlung</a></li>
     <li><a href="99-about.html">Kontakt</a></li>
   </ul>
