--- a/99-about.html
+++ b/99-about.html
@@ -37,11 +37,10 @@ aside (1. Sidebar mit dem Hauptmenu)
   <ul>
     <li><a href="index.html">Startseite</a></li>
     <li><a href="01-elektronik.html">Elektronik</a></li>
-    <li><a href="05-stm32.html">STM32</a></li>
-    <li><a href="06-avr_avr32.html">AVR+AVR32</a></li>
+    <li><a href="05-mikrocontroller.html">Mikrocontroller</a></li>
     <li><a href="15-displays.html">Displays</a></li>
-    <li><a href="25-emlinux.html">Embedded Linux</a></li>
-    <li><a href="35-pclinux.html">PC Linux</a></li>
+    <li><a href="35-linux.html">Linux</a></li>
+    <li><a href="50-pc.html">PC</a></li>
     <li><a href="75-collect.html">Sammlung</a></li>
     <li><a href="99-about.html">Kontakt</a></li>
   </ul>
@@ -65,10 +64,7 @@ Eine Liste wäre hier auch denkbar, stellt sich nur die Frage, wie das aussehen 
 Der eigentliche Inhalt der Seite
 -->
 <article id="main">
-  <h1 lang="en">Über diese Seite + Kontakt</h1><br><br>
-  An andere Stelle im Internet habe ich noch einen älteren Internetauftritt, der aber nur noch als "Archiv" bleibt...<br>
-  Unter <a href="https://github.com/spacerace">https://github.com/spacerace</a> ist dieser zu finden.<br><br><br>
-  
+  <h1 lang="en">Über diese Seite + Kontakt</h1><br><br>  
   
   Das Layout dieser Seite wurde mit einem sehr einfachen HTML/CSS-only Template von selfhtml.org erstellt, 
   <a href="http://wiki.selfhtml.org/extensions/Selfhtml/example.php/Beispiel:Design11-index.html">hier</a> zu finden.<br>
