--- a/index.html
+++ b/index.html
@@ -63,12 +63,22 @@ Eine Liste wäre hier auch denkbar, stellt sich nur die Frage, wie das aussehen 
 <!--
 Der eigentliche Inhalt der Seite
 -->
-<article id="main">
+<article id="main"><br>
 Da ich nicht weiss, was sich gut als Einleitung auf der Startseite macht, kommt hier erstmal nur eine Liste mit Inhalten:<br><br><br>
+<a href="saa1064.html">saa1064 7 Segment Treiber + Linux</a><br>
+<a href="sid_clock.html">SID-Clock - LED-Dot-Matrix Uhr mit STM32 "BluePill"</a><br>
+<a href="pc/sbc_ap40ahd.html">PC104 SBC AP40AHD mit Am5x86/133MHz</a><br>
+<a href="pc/logware_k6_cash_register.html">Logware PC-based cash register with AMD-K6</a><br>
+<a href="pc/winbond_extadp.html">WinBond Extension Adapter Mode (extadp) - ISA BUS on LPT</a><br>
+<br>Manches ist in englisch, manches in deutsch. Das Ziel ist aber, dass ich irgendwann alles zweisprachig hier habe...
+<br><br>
 
 
- An andere Stelle im Internet habe ich noch einen älteren Internetauftritt, der aber nur noch als "Archiv" bleibt...<br>
- Unter <a href="http://krumeltee.wordpress.com">krumeltee.wordpress.com</a> ist dieser zu finden.<br><br><br> 
+An anderer Stelle im Internet habe ich noch einen älteren Internetauftritt, der aber nur noch als "Archiv" bleibt...<br>
+Unter <a href="http://krumeltee.wordpress.com">krumeltee.wordpress.com</a> ist dieser zu finden. 
+Die Inhalte werden nach und nach hier her übertragen - oder gelöscht.
+ 
+ <br><br><br> 
   
 
 </article>
