work in progress #3

--- a/75-collect.html
+++ b/75-collect.html
@@ -5,7 +5,7 @@
   <meta name="description" content="spacerace-stecdose-krumeltee | private homepage | elektronik | mikrocontroller | linux">
   <meta name="viewport" content="width=device-width, initial-scale=1.0;" />
   <link href="css/style.css" rel="stylesheet" title="Default Stylesheet">
-  <title>Kontakt - spacerace.github.io</title>
+  <title>Sammlung / Collection - spacerace.github.io</title>
 </head>
 <body>
 
@@ -64,7 +64,9 @@ Eine Liste wäre hier auch denkbar, stellt sich nur die Frage, wie das aussehen 
 Der eigentliche Inhalt der Seite
 -->
 <article id="main">
-Hier ein paar Fotos und Beschreibungen, der Dinge in meiner "kleinen" Sammlung. 
+Hier ein paar Fotos und Beschreibungen, der Dinge in meiner "kleinen" Sammlung.<br>
+Die Fotos sind Links zu deren Beschreibungsseiten. Dort gibt es dann auch noch mehr Fotos.<br>
+
 </article>
 
 
