--- a/index.html
+++ b/index.html
@@ -64,12 +64,15 @@ Eine Liste wäre hier auch denkbar, stellt sich nur die Frage, wie das aussehen 
 Der eigentliche Inhalt der Seite
 -->
 <article id="main"><br>
-Da ich nicht weiss, was sich gut als Einleitung auf der Startseite macht, kommt hier erstmal nur eine Liste mit Inhalten:<br><br><br>
-<a href="saa1064.html">saa1064 7 Segment Treiber + Linux</a><br>
-<a href="sid_clock.html">SID-Clock - LED-Dot-Matrix Uhr mit STM32 "BluePill"</a><br>
-<a href="pc/sbc_ap40ahd.html">PC104 SBC AP40AHD mit Am5x86/133MHz</a><br>
-<a href="pc/logware_k6_cash_register.html">Logware PC-based cash register with AMD-K6</a><br>
-<a href="pc/winbond_extadp.html">WinBond Extension Adapter Mode (extadp) - ISA BUS on LPT</a><br>
+Da ich nicht weiss, was sich gut als Einleitung auf der Startseite macht, kommt hier erstmal nur eine Liste mit Inhalten:<br><br>
+Mikrocontroller + Elektronik:<br>
+<a href="saa1064.html"><strong>SAA1064</strong> 7 Segment Treiber + Linux</a><br>
+<a href="sid_clock.html"><strong>SID-Clock</strong> - LED-Dot-Matrix Uhr mit STM32 "BluePill"</a><br>
+
+<br>PC:<br>
+<a href="pc/sbc_ap40ahd.html">PC104 <strong>SBC AP40AHD</strong> mit Am5x86/133MHz</a><br>
+<a href="pc/logware_k6_cash_register.html"><strong>LogWare</strong> PC-Kasse mit <strong>AMD-K6</strong> / PC-based cash register</a><br>
+<a href="pc/winbond_extadp.html">WinBond <strong>Extension Adapter Mode</strong> (extadp) - <strong>ISA BUS on LPT</strong></a><br>
 <br>Manches ist in englisch, manches in deutsch. Das Ziel ist aber, dass ich irgendwann alles zweisprachig hier habe...
 <br><br>
 
