--- a/75-collect.html
+++ b/75-collect.html
@@ -66,7 +66,69 @@ Der eigentliche Inhalt der Seite
 <article id="main">
 Hier ein paar Fotos und Beschreibungen, der Dinge in meiner "kleinen" Sammlung.<br>
 Die Fotos sind Links zu deren Beschreibungsseiten. Dort gibt es dann auch noch mehr Fotos.<br>
+<br>
+<h1>PC:</h1>
+<center>
 
+<table width="850">
+<tr>
+	<td><img src="img/gallery_placeholder.png" alt="placeholder"><br>Single Board Computer - AP40AHD<br>Am5x86/133, 32MB RAM, DiskOnChip</td>
+	<td><img src="img/gallery_placeholder.png" alt="placeholder"><br>LogWare Kasse mit AMD-K6<br>800x600x4 TouchScreen LVDS Display</td>
+	<td><img src="img/gallery_placeholder.png" alt="placeholder"><br>LogWare KIO ISA-Multi-IO Board<br>VGA (LVDS), 4x Serial, ?HD44780?, LAN</td>
+</tr>
+<tr>
+	<td><center><img src="img/gallery_placeholder.png" alt="placeholder">Dr. Kaiser's PC Wächter ISA Karte<br>Arbeitet mit DiskOnChip zusammen!</center></td>
+	<td><center><img src="img/gallery_placeholder.png" alt="placeholder">WinBond W83787IF ISA Controller recycled!<br>Extension Adapter Mode</center></td>
+	<td><center><img src="img/gallery_placeholder.png" alt="placeholder">(Fake-)16Bit ISA Soundkarte in 8Bit Bus<br>Den 16Bit-Part zugetaped</center></td>
+</tr>
+<tr>
+	<td><a href="pc/intel_al440lx.html"><img src="img/gallery_placeholder.png" alt="placeholder">Intel AL440LX Pentium II Mainboard</a><br>Das erste Desktop-Board mit AGP<br>First desktop board with AGP<br>...</td>
+	<td><img src="img/gallery_placeholder.png" alt="placeholder">Asus SP-97V USB-IR-PS2 wrong pinout<br>burned parts onboard<br>Falsche Pinbelegung im Manual<br>Bauteile verkokelt</td>
+	<td><img src="img/gallery_placeholder.png" alt="placeholder">ISEL Automation 8Bit ISA IO Karte<br>still to reverse-engineer<br>Noch kein Schaltbild erstellt, alles unbekannt.<br>...</td>
+</tr>
+</table>
+<br>
+</center>
+<h1>CPUs und andere Chips</h1>
+<center>
+<table width="850">
+<tr>
+	<td><img src="img/gallery_placeholder_small.png" alt="placeholder"></td>
+	<td><img src="img/gallery_placeholder_small.png" alt="placeholder"></td>
+	<td><img src="img/gallery_placeholder_small.png" alt="placeholder"></td>
+	<td><img src="img/gallery_placeholder_small.png" alt="placeholder"></td>
+	<td><img src="img/gallery_placeholder_small.png" alt="placeholder"></td>
+</tr>
+<tr>
+	<td><img src="img/gallery_placeholder_small.png" alt="placeholder"></td>
+	<td><img src="img/gallery_placeholder_small.png" alt="placeholder"></td>
+	<td><img src="img/gallery_placeholder_small.png" alt="placeholder"></td>
+	<td><img src="img/gallery_placeholder_small.png" alt="placeholder"></td>
+	<td><img src="img/gallery_placeholder_small.png" alt="placeholder"></td>
+</tr>
+<tr>
+	<td><img src="img/gallery_placeholder_small.png" alt="placeholder"></td>
+	<td><img src="img/gallery_placeholder_small.png" alt="placeholder"></td>
+	<td><img src="img/gallery_placeholder_small.png" alt="placeholder"></td>
+	<td><img src="img/gallery_placeholder_small.png" alt="placeholder"></td>
+	<td><img src="img/gallery_placeholder_small.png" alt="placeholder"></td>
+</tr>
+<tr>
+	<td><img src="img/gallery_placeholder_small.png" alt="placeholder"></td>
+	<td><img src="img/gallery_placeholder_small.png" alt="placeholder"></td>
+	<td><img src="img/gallery_placeholder_small.png" alt="placeholder"></td>
+	<td><img src="img/gallery_placeholder_small.png" alt="placeholder"></td>
+	<td><img src="img/gallery_placeholder_small.png" alt="placeholder"></td>
+</tr>
+<tr>
+	<td><img src="img/gallery_placeholder_small.png" alt="placeholder"></td>
+	<td><img src="img/gallery_placeholder_small.png" alt="placeholder"></td>
+	<td><img src="img/gallery_placeholder_small.png" alt="placeholder"></td>
+	<td><img src="img/gallery_placeholder_small.png" alt="placeholder"></td>
+	<td><img src="img/gallery_placeholder_small.png" alt="placeholder"></td>
+</tr>
+</table>
+</center>
 </article>
 
 
