--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@ Mikrocontroller + Elektronik:<br>
 <a href="pc/sbc_ap40ahd.html">PC104 <strong>SBC AP40AHD</strong> mit Am5x86/133MHz</a><br>
 <a href="pc/logware_k6_cash_register.html"><strong>LogWare</strong> PC-Kasse mit <strong>AMD-K6</strong> / PC-based cash register</a><br>
 <a href="pc/winbond_extadp.html">WinBond <strong>Extension Adapter Mode</strong> (extadp) - <strong>ISA BUS on LPT</strong></a><br>
+<a href="pc/intel_al440lx.html"><b><strong>Intel AL440LX</strong></b> - Das erste Desktop Mainboard mit AGP</a><br>
 <br>Manches ist in englisch, manches in deutsch. Das Ziel ist aber, dass ich irgendwann alles zweisprachig hier habe...
 <br><br>
 
