--- a/pc/intel_al440lx.html
+++ b/pc/intel_al440lx.html
@@ -82,7 +82,10 @@ Zwar noch nicht so alt (08/1997), aber ich denke auf jeden Fall Wert eines einzu
 mit dem maximalen RAM-Ausbau von 384MB und einer 256MB Geforce Karte mit DVI - oversized, aber funktioniert :).
 <br><br>
 Anmerkungen / BIOS Limits:<br>
-* Eine 80GB Festplatte wird im BIOS nur mit 64GB erkannt. Ein Linux-System erkennt jedoch die vollen 80GB.
+* Eine 80GB Festplatte wird im BIOS nur mit 64GB erkannt. Ein Linux-System erkennt jedoch die vollen 80GB.<br><br>
+Im Internet-Wayback-Archive findet sich eine Seite, von einem User, der sich viel mit diesem Board befasst hat und
+auch einige Unterschieder der verschiedenen BIOS Versionen aufzeigt.<br>
+<a href="https://web.archive.org/web/20160508205029/http://home.earthlink.net/~billselk/al440lx/">Hier ist der Link zu einer der letzten Versionen dieser Seite.</a>
 
 </article>
 
